# hpqtypes

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  LICENSE  PQTypes.cabal  README.md  Setup.hs  cabal.haskell-ci  cabal.project  fourmolu.yaml  ghc-tags.yaml  hpqtypes-test.conf  hpqtypes.cabal  pqtypes.cabal
.github/workflows/: fourmolu.yaml  haskell-ci.yml  hlint.yaml
DB/: Class.hs  FromSQL.hs  Monad.hs  Row.hs  ToSQL.hs
DB/Primitive/: Get.hs  Interface.hs  Put.hs  Types.hsc  Utils.hs
Data/Monoid/: Space.hs  Utils.hs
Database/PostgreSQL/: Class.hs  Composite.hs  Fold.hs  FromSQL.hs  PQTypes.hs  Row.hs  ToSQL.hs  Types.hs
Database/PostgreSQL/Internal/: Composite.hs  Error.hs  Exception.hs  Monad.hs  Query.hs  SQL.hs  Settings.hs  State.hs  Transaction.hs  Utils.hs
Database/PostgreSQL/Internal/C/: Get.hs  Interface.hs  Put.hs  Types.hsc
Database/PostgreSQL/PQTypes/: Array.hs  Binary.hs  Class.hs  Composite.hs  Fold.hs  Fork.hs  Format.hs  FromRow.hs  FromSQL.hs  Row.hs  SQL.hs  Single.hs  ToRow.hs  ToSQL.hs  Transaction.hs  Types.hs
Database/PostgreSQL/PQTypes/Internal/: Composite.hs  Connection.hs  Error.hs  Exception.hs  Format.hs  Monad.hs  Query.hs  QueryResult.hs  SQL.hs  Settings.hs  State.hs  Transaction.hs  Utils.hs
Database/PostgreSQL/PQTypes/Internal/C/: Get.hs  Interface.hs  Put.hs  Types.hsc
Database/PostgreSQL/PQTypes/SQL/: Class.hs  Raw.hs
Database/PostgreSQL/PQTypes/Transaction/: Settings.hs
bench/: Main.hs
bench-db/: Main.hs
cbits/: null_string.c
examples/: Catalog.hs  Observability.hs  OuterJoins.hs
libpqtypes/: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  Makefile.win32  README  acinclude.m4  configure  configure.ac  groff2html  win32.mak
libpqtypes/docs/man3/: PQclearSpecs.3  PQclearTypes.3  PQexecf.3  PQgeterror.3  PQgetf.3  PQgetvf.3  PQinitTypes.3  PQlocalTZInfo.3  PQparamCount.3  PQparamCreate.3  PQparamExec.3  PQparamExecPrepared.3  PQparamSendQuery.3  PQparamSendQueryPrepared.3  PQputf.3  PQputvf.3  PQregisterComposites.3  PQregisterResult.3  PQregisterSubClasses.3  PQregisterTypes.3  PQregisterUserDefinedTypes.3  PQsendvf.3  PQseterror.3  PQspecPrepare.3  PQtypesRegister.3  pqt-composites.3  pqt-handlers.3  pqt-specs.3
libpqtypes/src/: array.c  datetime.c  error.c  events.c  exec.c  ffi.c  geo.c  getaddrinfo.h  handler.c  libpqtypes-int.h  libpqtypes.h  misc.c  network.c  numerics.c  param.c  port.c  pqt_config.h  pqt_config.h.in  record.c  regression-test.c  spec.c  utils.c  varlena.c
src/Data/Monoid/: Space.hs  Utils.hs
src/Database/PostgreSQL/: PQTypes.hs
src/Database/PostgreSQL/PQTypes/: Array.hs  Binary.hs  Class.hs  Composite.hs  Cursor.hs  Enum.hs  Exception.hs  Fold.hs  Format.hs  FromRow.hs  FromSQL.hs  Interval.hs  Interval.hsc  JSON.hs  Notification.hs  SQL.hs  Single.hs  ToRow.hs  ToSQL.hs  Transaction.hs  Utils.hs  XML.hs
src/Database/PostgreSQL/PQTypes/Class/: Instances.hs
src/Database/PostgreSQL/PQTypes/Class/Instances/: Overlapping.hs
src/Database/PostgreSQL/PQTypes/Internal/: BackendPid.hs  Composite.hs  Connection.hs  Error.hs  Exception.hs  Fold.hs  Monad.hs  Notification.hsc  Oid.hs  Query.hs  QueryResult.hs  RowDecoder.hs  State.hs  Utils.hs
src/Database/PostgreSQL/PQTypes/Internal/C/: Get.hs  Interface.hs  Interface.hsc  Put.hs  Types.hsc
src/Database/PostgreSQL/PQTypes/Internal/Error/: Code.hs
src/Database/PostgreSQL/PQTypes/SQL/: Class.hs  Observability.hs  Raw.hs
src/Database/PostgreSQL/PQTypes/Transaction/: Settings.hs
test/: Main.hs
test/Prelude/: Instances.hs
test/Test/: Array.hs  Connection.hs  Cursor.hs  Enum.hs  Env.hs  RowDecoder.hs  Transaction.hs  Tuples.hs  Types.hs
test/Test/Aeson/: Compat.hs
test/Test/QuickCheck/: Compat.hs
test/Test/QuickCheck/Arbitrary/: Instances.hs
