name:                PQTypes
version:             1.0.0
synopsis:            Haskell bindings to libpqtypes (libpq extension)

-- description:

license:             BSD3
license-file:        LICENSE
author:              Scrive
maintainer:          andrzej@scrive.com
category:            Database
build-type:          Custom
cabal-version:       >=1.16

library
  exposed-modules:     Data.Monoid.Space
                     , Data.Monoid.Utils
                     , Database.PostgreSQL.PQTypes
                     , Database.PostgreSQL.PQTypes.Composite
                     , Database.PostgreSQL.PQTypes.ToRow
                     , Database.PostgreSQL.PQTypes.Utils
                     , Database.PostgreSQL.PQTypes.FromSQL
                     , Database.PostgreSQL.PQTypes.Array
                     , Database.PostgreSQL.PQTypes.Fold
                     , Database.PostgreSQL.PQTypes.FromRow
                     , Database.PostgreSQL.PQTypes.ToSQL
                     , Database.PostgreSQL.PQTypes.Transaction
                     , Database.PostgreSQL.PQTypes.Class
                     , Database.PostgreSQL.PQTypes.Format
                     , Database.PostgreSQL.PQTypes.Binary
                     , Database.PostgreSQL.PQTypes.SQL
                     , Database.PostgreSQL.PQTypes.Single
                     , Database.PostgreSQL.PQTypes.SQL.Raw
                     , Database.PostgreSQL.PQTypes.SQL.Class
                     , Database.PostgreSQL.PQTypes.Transaction.Settings
                     , Database.PostgreSQL.PQTypes.Internal.Error
                     , Database.PostgreSQL.PQTypes.Internal.Composite
                     , Database.PostgreSQL.PQTypes.Internal.Utils
                     , Database.PostgreSQL.PQTypes.Internal.Connection
                     , Database.PostgreSQL.PQTypes.Internal.Exception
                     , Database.PostgreSQL.PQTypes.Internal.Monad
                     , Database.PostgreSQL.PQTypes.Internal.QueryResult
                     , Database.PostgreSQL.PQTypes.Internal.Query
                     , Database.PostgreSQL.PQTypes.Internal.State
                     , Database.PostgreSQL.PQTypes.Internal.C.Put
                     , Database.PostgreSQL.PQTypes.Internal.C.Types
                     , Database.PostgreSQL.PQTypes.Internal.C.Interface
                     , Database.PostgreSQL.PQTypes.Internal.C.Get

  build-depends:       base >=4.5 && <4.6
                     , text >=0.11 && <0.12
                     , bytestring >=0.9 && <0.10
                     , time >=1.4 && <1.5
                     , vector >=0.10 && <0.11
                     , transformers-base >=0.4 && <0.5
                     , monad-control >=0.3 && <0.4
                     , lifted-base >=0.2 && <0.3
                     , resource-pool >=0.2 && <0.3
                     , mtl >=2.1 && <2.2
                     , transformers >=0.2.2 && <0.4

  hs-source-dirs:    src

  ghc-options:       -O2 -funbox-strict-fields

  build-tools:       hsc2hs
  include-dirs:      libpqtypes/src
  extra-libraries:   pq

  cc-options:        -DHAVE_CONFIG_H -D_GNU_SOURCE -D_REENTRANT -O2 -std=gnu99 -fsigned-char -fno-strict-aliasing -Wall -Wextra

  c-sources:           libpqtypes/src/array.c
                     , libpqtypes/src/datetime.c
                     , libpqtypes/src/error.c
                     , libpqtypes/src/events.c
                     , libpqtypes/src/exec.c
                     , libpqtypes/src/geo.c
                     , libpqtypes/src/handler.c
                     , libpqtypes/src/misc.c
                     , libpqtypes/src/network.c
                     , libpqtypes/src/numerics.c
                     , libpqtypes/src/param.c
                     , libpqtypes/src/port.c
                     , libpqtypes/src/record.c
                     , libpqtypes/src/spec.c
                     , libpqtypes/src/utils.c
                     , libpqtypes/src/varlena.c

  default-language:  Haskell2010
