cabal-version:       3.0
build-type:          Simple
name:                hpqtypes
version:             2.0.0.0
synopsis:            Haskell bindings to libpq

description:         Efficient and easy-to-use bindings to @libpq@ that use
                     the binary transport format for queries and their
                     results.
                     .
                     Examples can be found in the
                     <https://github.com/scrive/hpqtypes/tree/master/examples examples>
                     directory.

homepage:            https://github.com/scrive/hpqtypes
license:             BSD-3-Clause
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>
copyright:           Scrive AB
category:            Database
tested-with:         GHC == { 9.6.7, 9.8.4, 9.10.3, 9.12.4, 9.14.1 }

extra-source-files: README.md
                  , CHANGELOG.md
                  , examples/Catalog.hs

source-repository head
  type:     git
  location: https://github.com/scrive/hpqtypes.git

common language
    ghc-options:        -Wall
                        -Wcompat
                        -Werror=missing-deriving-strategies
                        -Werror=prepositive-qualified-module

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DataKinds
                        DeriveAnyClass
                        DeriveFunctor
                        DeriveGeneric
                        DerivingStrategies
                        DerivingVia
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        ImportQualifiedPost
                        LambdaCase
                        NoStarIsType
                        OverloadedRecordDot
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards
                        RoleAnnotations
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        UndecidableInstances

library
  import:            language

  exposed-modules:     Data.Monoid.Utils
                     , Database.PostgreSQL.PQTypes
                     , Database.PostgreSQL.PQTypes.Class
                     , Database.PostgreSQL.PQTypes.Cursor
                     , Database.PostgreSQL.PQTypes.Enum
                     , Database.PostgreSQL.PQTypes.Fold
                     , Database.PostgreSQL.PQTypes.Format
                     , Database.PostgreSQL.PQTypes.FromSQL
                     , Database.PostgreSQL.PQTypes.Internal.BackendPid
                     , Database.PostgreSQL.PQTypes.Internal.C.Interface
                     , Database.PostgreSQL.PQTypes.Internal.C.Types
                     , Database.PostgreSQL.PQTypes.Internal.Connection
                     , Database.PostgreSQL.PQTypes.Internal.Error
                     , Database.PostgreSQL.PQTypes.Internal.Error.Code
                     , Database.PostgreSQL.PQTypes.Internal.Exception
                     , Database.PostgreSQL.PQTypes.Internal.Monad
                     , Database.PostgreSQL.PQTypes.Internal.Notification
                     , Database.PostgreSQL.PQTypes.Internal.Oid
                     , Database.PostgreSQL.PQTypes.Internal.QueryResult
                     , Database.PostgreSQL.PQTypes.Internal.RowDecoder
                     , Database.PostgreSQL.PQTypes.Internal.State
                     , Database.PostgreSQL.PQTypes.Internal.Utils
                     , Database.PostgreSQL.PQTypes.Interval
                     , Database.PostgreSQL.PQTypes.JSON
                     , Database.PostgreSQL.PQTypes.Notification
                     , Database.PostgreSQL.PQTypes.SQL
                     , Database.PostgreSQL.PQTypes.SQL.Class
                     , Database.PostgreSQL.PQTypes.SQL.Raw
                     , Database.PostgreSQL.PQTypes.ToRow
                     , Database.PostgreSQL.PQTypes.ToSQL
                     , Database.PostgreSQL.PQTypes.Transaction
                     , Database.PostgreSQL.PQTypes.Transaction.Settings
                     , Database.PostgreSQL.PQTypes.Utils
                     , Database.PostgreSQL.PQTypes.XML

  build-depends:       base              >= 4.18    && < 5
                     , aeson             >= 2.0
                     , binary-parser     >= 0.5
                     , bytestring        >= 0.9
                     , containers        >= 0.5.0.0
                     , exceptions        >= 0.9
                     , iproute           >= 1.7
                     , lifted-base       >= 0.2
                     , monad-control     >= 1.0.3
                     , mtl               >= 2.1
                     , postgresql-binary >= 0.15
                     , resource-pool     >= 0.4
                     , scientific        >= 0.3.8.0
                     , stm               >= 2.5.0.0
                     , text              >= 0.11
                     , text-show         >= 2
                     , time              >= 1.4
                     , transformers      >= 0.2.2
                     , transformers-base >= 0.4
                     , uuid-types        >= 1.0.3
                     , vector            >= 0.10

  pkgconfig-depends: libpq

  hs-source-dirs:    src

  c-sources:         cbits/null_string.c

benchmark bench
  import:            language

  type:              exitcode-stdio-1.0

  hs-source-dirs:    bench
  main-is:           Main.hs

  build-depends:       hpqtypes
                     , base
                     , bytestring
                     , containers
                     , deepseq >= 1.4
                     , tasty-bench >= 0.3
                     , text
                     , time
                     , vector

benchmark bench-db
  import:            language

  type:              exitcode-stdio-1.0
  ghc-options:       -threaded

  hs-source-dirs:    bench-db
  main-is:           Main.hs

  build-depends:       hpqtypes
                     , base
                     , deepseq >= 1.4
                     , text
                     , time
                     , transformers-base

test-suite test
  import:            language

  type:              exitcode-stdio-1.0
  ghc-options:       -threaded "-with-rtsopts=-N4"

  hs-source-dirs:    test
  main-is:           Main.hs
  other-modules:     Test.Array
                     Test.Connection
                     Test.Cursor
                     Test.Enum
                     Test.Env
                     Test.QuickCheck.Arbitrary.Instances
                     Test.RowDecoder
                     Test.Transaction
                     Test.Tuples
                     Test.Types

  -- make sure examples compile
  hs-source-dirs:    examples
  other-modules:     Catalog
                     OuterJoins

  build-depends:       hpqtypes
                     , QuickCheck >= 2.7
                     , aeson
                     , base
                     , bytestring
                     , exceptions
                     , haskeline >= 0.8.0.0
                     , iproute
                     , lifted-base
                     , monad-control
                     , mtl
                     , random >= 1.3
                     , resource-pool
                     , scientific
                     , tasty >= 1.4 && < 1.5.4
                     , tasty-hunit >= 0.10
                     , text
                     , text-show
                     , time
                     , transformers-base
                     , uuid-types
                     , vector
